# rhascal

./: LICENSE  Makefile  rhascal.cabal  stack.yaml
app/: Main.hs
src/: Board.hs  Combat.hs  Damage.hs  Dice.hs  Display.hs  Keyboard.hs  Model.hs  RequestHandling.hs
test/: ArbitraryTypes.hs  BoardDisplaySpec.hs  CombatSpec.hs  DamageSpec.hs  DiceSpec.hs  LogicalBoardSpec.hs  MovementSpec.hs  Spec.hs  TestHelpers.hs
