name:                rhascal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/camelpunch/rhascal#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Bruce
maintainer:          me@andrewbruce.net
copyright:           2017 Andrew Bruce
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , Board
                     , Combat
                     , Damage
                     , Dice
                     , Display
                     , Keyboard
                     , RequestHandling
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , random
                     , matrix >= 0.3.5.0 && < 0.3.6
  default-language:    Haskell2010

executable rhascal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , rhascal
                     , ansi-terminal
                     , random
  default-language:    Haskell2010

test-suite rhascal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ArbitraryTypes
                     , TestHelpers
                     , BoardDisplaySpec
                     , CombatSpec
                     , DamageSpec
                     , DiceSpec
                     , LogicalBoardSpec
                     , MovementSpec
  main-is:             Spec.hs
  build-depends:       base
                     , rhascal
                     , hspec >= 2.4.2 && < 2.5
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/camelpunch/rhascal
